# finance-assistant-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  api.py  config.py  llm.py  schemas.py  service.py  workflow_graph.py  workflow_logging.py
app/routers/: telegram.py
app/services/: telegram.py
database/: accounts_table_operations.py  expense_transaction_table_operations.py  merchants_table_operations.py  utils.py
docs/: DATABASE_SCHEMA.md  Database_ERD.mmd  Expenses_Insertion_Workflow.md
init/postgres/: postgres_init.sql
scripts/: seed_initial_data.sql  setup_telegram_commands.py  setup_telegram_webhook.py
tests/: test_api_endpoint.py  test_telegram_bot_connection.py  test_telegram_webhook.py  test_workflow_resolution.py
