[project]
name = "financial-assitant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-postgres",
    "pydantic",
    "psycopg",
    "rapidfuzz",
    "sqlalchemy",
    "uvicorn",
    "python-dotenv",
    "requests",
]
